--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://www.charityjob.co.uk/jobs/support-after-suicide-partnership/project-manager/671914?tsId=8'>Project Manager | Support after Suicide Partnership |  | CharityJob.co.uk</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://cbre.referrals.selectminds.com/CBREVmjbYE'>Program Manager - Data Centers - CBRE Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://apply.workable.com/semaphore/j/F26D1DD737/'>Engineering Project Manager - Semaphore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
@@ -92,7 +100,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nortek/job/oO7sbfwi'>Nortek, Inc. Careers - Project Manager III</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nortek/job/oO7sbfwi'>Nortek, Inc. Careers - Project Manager III</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -114,7 +122,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Cu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/NealAnalytics/743999698493118-business-intelligence-project-manager'>Neal Analytics Business Intelligence Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/NealAnalytics/743999698493118-business-intelligence-project-manager'>Neal Analytics Business Intelligence Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Redmond, WA, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -150,7 +158,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Cu
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/program-manager-14085'>Program Manager - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/program-manager-14085'>Program Manager - Experian Careers</a></h5> 
 <p><span class="badge badge-light">Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -188,7 +196,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/reputation/56cbb736-c6f8-477c-959f-883d4bb4b0b3'>Reputation.com - Program Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/reputation/56cbb736-c6f8-477c-959f-883d4bb4b0b3'>Reputation.com - Program Manager</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -204,7 +212,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/beyondmeat/61ecafea-93c6-4233-9b0f-7a00305a79d2'>Beyond Meat - Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/beyondmeat/61ecafea-93c6-4233-9b0f-7a00305a79d2'>Beyond Meat - Project Manager</a></h5> 
 <p><span class="badge badge-light">El Segundo, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -228,7 +236,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/oak-street-health/job/oIUsbfwZ'>Oak Street Health Careers - Clinical Informatics Specialist (CIS) Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/oak-street-health/job/oIUsbfwZ'>Oak Street Health Careers - Clinical Informatics Specialist (CIS) Program Manager</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois  Chicago</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -300,7 +308,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://hire.withgoogle.com/public/jobs/polsourcecom/view/P_AAAAAAIAACzJAsYbTb2LPm'>Program Manager job in San Francisco, CA at PolSource</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hire.withgoogle.com/public/jobs/polsourcecom/view/P_AAAAAAIAACzJAsYbTb2LPm'>Program Manager job in San Francisco, CA at PolSource</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA San Francisco, CA, USA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -316,7 +324,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Denver, Colorado  New York, New York  Scottsdale, Arizona</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oah8afwt&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nOzXpMw0'>ServiceNow Careers - Senior Learning Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oah8afwt&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nOzXpMw0'>ServiceNow Careers - Senior Learning Program Manager</a></h5> 
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -358,7 +366,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/avispatechnology/jobs/total-rewards-project-manager-akcXe--_ar6y6QaKiznY58'>Total Rewards Project Manager #5315 job at Avispa Technology in Newark, NJ, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/avispatechnology/jobs/total-rewards-project-manager-akcXe--_ar6y6QaKiznY58'>Total Rewards Project Manager #5315 job at Avispa Technology in Newark, NJ, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Newark, NJNewark, NJ</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -374,7 +382,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Canada  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GoodwillIndustriesOfNorthernNewEngland/743999698590071-goodclean-project-manager-i'>Goodwill Industries of Northern New England GoodClean Project Manager I | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GoodwillIndustriesOfNorthernNewEngland/743999698590071-goodclean-project-manager-i'>Goodwill Industries of Northern New England GoodClean Project Manager I | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -439,14 +447,6 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <h5><a href='https://boards.greenhouse.io/bpcs/jobs/1928884'>Job Application for Customer Success Talent Development Program Manager at Blueprint Technologies</a></h5> 
 <p><span class="badge badge-light">Irving, TX  Irving, TX</span></p>
 <p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698577677-senior-project-manager'>CapTech Consulting Senior Project Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Charlotte, NC</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585244'>Stellenangebot: Senior Project Manager Event/G?ste Management (m/w) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin</span></p>
-<p>Posted on:: 2019-10-31</p>
 <hr/>
 
 
